--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@supabase/postgrest-js",
+  "name": "@smarts/postgrest-js",
   "version": "0.0.0-automated",
   "description": "Isomorphic PostgREST client",
   "keywords": [
