fix: update version from 0.0.0-automated to 0.0.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smarts/postgrest-js",
-  "version": "0.0.0-automated",
+  "version": "0.0.1",
   "description": "Isomorphic PostgREST client",
   "keywords": [
     "postgrest",
