fix: update package name to reflect correct organization

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@smarts/postgrest-js",
+  "name": "@teamprodevs/postgrest-js",
   "version": "0.0.1",
   "description": "Isomorphic PostgREST client",
   "keywords": [
