--- a/package.json
+++ b/package.json
@@ -1,78 +1,49 @@
 {
   "name": "@teamprodevs/postgrest-js",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Isomorphic PostgREST client",
   "keywords": [
     "postgrest",
     "supabase"
   ],
-  "homepage": "https://github.com/smarts-uz/postgrest-js",
-  "bugs": "https://github.com/smarts-uz/postgrest-js/issues",
   "license": "MIT",
   "author": "Supabase",
-  "files": [
-    "dist",
-    "src"
-  ],
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/wrapper.mjs",
-  "exports": {
-    "import": {
-      "types": "./dist/cjs/index.d.ts",
-      "default": "./dist/esm/wrapper.mjs"
-    },
-    "require": {
-      "types": "./dist/cjs/index.d.ts",
-      "default": "./dist/cjs/index.js"
-    }
-  },
-  "types": "./dist/cjs/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/smarts-uz/postgrest-js.git"
   },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.mjs",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/types/index.d.ts",
+        "default": "./dist/esm/index.mjs"
+      },
+      "require": {
+        "types": "./dist/types/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      }
+    }
+  },
   "scripts": {
-    "clean": "rimraf dist docs/v2",
-    "format": "prettier --write \"{src,test}/**/*.ts\" wrapper.mjs",
-    "format:check": "prettier --check \"{src,test}/**/*.ts\"",
-    "build": "run-s clean format build:*",
-    "build:cjs": "tsc -p tsconfig.json",
-    "build:esm": "cpy wrapper.mjs dist/esm/",
-    "docs": "typedoc src/index.ts --out docs/v2",
-    "docs:json": "typedoc --json docs/v2/spec.json --excludeExternals src/index.ts",
-    "test": "run-s format:check test:types db:clean db:run test:generated-types test:run db:clean && node test/smoke.cjs && node test/smoke.mjs",
-    "test:ci": "run-s format:check test:types:ci db:clean db:run test:generated-types test:run db:clean && node test/smoke.cjs && node test/smoke.mjs",
-    "test:run": "jest --runInBand --coverage",
-    "test:generated-types": "run-s db:generate-test-types && git diff --exit-code test/types.generated.ts || (echo '❌ Generated types are not up to date. Run npm run db:generate-test-types.' && exit 1)",
-    "test:update": "run-s db:clean db:run db:generate-test-types && jest --runInBand --updateSnapshot && run-s db:clean",
-    "test:types": "run-s build && tstyche",
-    "test:types:ci": "run-s build && tstyche --target '4.7,5.5,latest'",
-    "test:types:watch": "chokidar 'src/**/*.ts' 'test/**/*.ts' -c 'npm run test:types'",
-    "type-check": "tsc --noEmit --project tsconfig.json",
-    "type-check:test": "tsc --noEmit --project tsconfig.test.json",
-    "db:clean": "cd test/db && docker compose down --volumes",
-    "db:run": "cd test/db && docker compose up --detach && wait-for-localhost 3000",
-    "db:generate-test-types": "cd test/db && docker compose up --detach && wait-for-localhost 8080 && curl --location 'http://0.0.0.0:8080/generators/typescript?included_schemas=public,personal&detect_one_to_one_relationships=true' > ../types.generated.ts && node ../scripts/update-json-type.js && prettier --write ../types.generated.ts"
+    "clean": "rimraf dist",
+    "build:cjs": "tsc -p tsconfig.json --module commonjs --outDir dist/cjs",
+    "build:esm": "tsc -p tsconfig.json --module esnext --outDir dist/esm",
+    "build:types": "tsc -p tsconfig.json --emitDeclarationOnly --declaration --outDir dist/types",
+    "build": "run-s clean build:cjs build:esm build:types",
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "@supabase/node-fetch": "^2.6.14"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.1",
-    "chokidar-cli": "^3.0.0",
-    "cpy-cli": "^5.0.0",
-    "jest": "^28.1.0",
-    "node-abort-controller": "^3.0.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "rimraf": "^3.0.2",
-    "semantic-release-plugin-update-version-in-files": "^1.1.0",
-    "ts-jest": "^28.0.3",
-    "tstyche": "^4.3.0",
-    "type-fest": "^4.32.0",
-    "typedoc": "^0.23.28",
     "typescript": "^4.5.5",
-    "wait-for-localhost-cli": "^3.0.0",
-    "zod": "^3.25.76"
+    "rimraf": "^3.0.2",
+    "npm-run-all": "^4.1.5"
   }
 }
