--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teamprodevs/postgrest-js",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Isomorphic PostgREST client",
   "keywords": [
     "postgrest",
@@ -32,18 +32,16 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build:cjs": "tsc -p tsconfig.json --module commonjs --outDir dist/cjs",
-    "build:esm": "tsc -p tsconfig.json --module esnext --outDir dist/esm",
-    "build:types": "tsc -p tsconfig.json --emitDeclarationOnly --declaration --outDir dist/types",
-    "build": "run-s clean build:cjs build:esm build:types",
+    "build": "tsup src/index.ts --dts --format esm,cjs",
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "@supabase/node-fetch": "^2.6.14"
   },
   "devDependencies": {
-    "typescript": "^4.5.5",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "npm-run-all": "^4.1.5"
+    "tsup": "^8.5.0",
+    "typescript": "^4.5.5"
   }
 }
