--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
   "name": "@teamprodevs/postgrest-js",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Isomorphic PostgREST client",
-  "keywords": [
-    "postgrest",
-    "supabase"
-  ],
+  "keywords": ["postgrest", "supabase"],
   "license": "MIT",
   "author": "Supabase",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/smarts-uz/postgrest-js.git"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.mjs",
   "types": "dist/types/index.d.ts",
@@ -32,7 +27,7 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build": "tsup src/index.ts --dts --format esm,cjs",
+    "build": "tsup src/index.ts --dts --format cjs,esm --out-dir dist",
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
